# finpilot

./: CMakeLists.txt  todo
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build-dir/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-dir/finpilot_autogen/: deps  moc_predefs.h
notes/: .constructor.swp  .replaceall.swp  const  constructor  copy  filereading  ftxui  header  replaceall
se/class/: class
src/app/: CMakeLists.txt  main.cpp
src/app/.qt/: QtDeploySupport.cmake
src/core/: .finpilotengine.h.swp  CMakeCache.txt  CMakeLists.txt  app.cpp  app.h  cmake_install.cmake  dataanalysis.cpp  dataanalysis.h  dataloader.cpp  dataloader.h  datavisualization.cpp  datavisualization.h  expenseanalysis.cpp  expenseanalysis.h  financialdata.cpp  financialdata.h  financialtypes.h  finpilot  finpilotengine.cpp  finpilotengine.h  incomeanalysis.cpp  incomeanalysis.h  main.cpp  portfolioanalysis.cpp  portfolioanalysis.h
src/core/.qt/: QtDeployTargets.cmake
src/core/finpilot_autogen/: deps  mocs_compilation.cpp
src/core/finpilot_autogen/EWIEGA46WW/: moc_app.cpp.d  moc_dataloader.cpp.d  moc_financialdata.cpp.d  moc_finpilotengine.cpp.d
src/ui/: dashboard.cpp  dashboard.hpp  visuals.cpp  visuals.h
src/ui/sections/: networth.cpp  networth.hpp
test-data/: expenses.csv  income.csv
tests/: income.csv
